tests/paczka1/small_fuzzy/61046954.err
Error in line 1: S933 A770 74,7
Error in line 3: v65dbo S933 66,0
Error in line 10: Rli S933 68,5
